// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Tab /> > override the tabIndex if it was provided 1`] = `
<li
  aria-controls="panelnull"
  aria-disabled="false"
  aria-selected="false"
  class="react-tabs__tab"
  data-rttab="true"
  id="tabnull"
  role="tab"
  tabindex="0"
>
  Hello
</li>
`;

exports[`<Tab /> > should accept className 1`] = `
<li
  aria-controls="panelnull"
  aria-disabled="false"
  aria-selected="false"
  class="foobar"
  data-rttab="true"
  id="tabnull"
  role="tab"
/>
`;

exports[`<Tab /> > should allow to be wrapped in higher-order-component 1`] = `
<li
  aria-controls="panelnull"
  aria-disabled="false"
  aria-selected="false"
  class="react-tabs__tab"
  data-rttab="true"
  id="tabnull"
  role="tab"
/>
`;

exports[`<Tab /> > should have sane defaults 1`] = `
<li
  aria-controls="panelnull"
  aria-disabled="false"
  aria-selected="false"
  class="react-tabs__tab"
  data-rttab="true"
  id="tabnull"
  role="tab"
/>
`;

exports[`<Tab /> > should not allow overriding all default properties 1`] = `
<li
  aria-controls="panelnull"
  aria-disabled="false"
  aria-selected="false"
  class="react-tabs__tab"
  data-rttab="true"
  id="tabnull"
  role="tab"
/>
`;

exports[`<Tab /> > should pass through custom properties 1`] = `
<li
  aria-controls="panelnull"
  aria-disabled="false"
  aria-selected="false"
  class="react-tabs__tab"
  data-rttab="true"
  data-tooltip="Tooltip contents"
  id="tabnull"
  role="tab"
/>
`;

exports[`<Tab /> > should support being disabled 1`] = `
<li
  aria-controls="panelnull"
  aria-disabled="true"
  aria-selected="false"
  class="react-tabs__tab react-tabs__tab--disabled"
  data-rttab="true"
  id="tabnull"
  role="tab"
/>
`;

exports[`<Tab /> > should support being disabled with custom class name 1`] = `
<li
  aria-controls="panelnull"
  aria-disabled="true"
  aria-selected="false"
  class="react-tabs__tab coolDisabled"
  data-rttab="true"
  id="tabnull"
  role="tab"
/>
`;

exports[`<Tab /> > should support being selected 1`] = `
<li
  aria-controls="panelabcd"
  aria-disabled="false"
  aria-selected="true"
  class="react-tabs__tab react-tabs__tab--selected"
  data-rttab="true"
  id="tababcd"
  role="tab"
  tabindex="0"
>
  Hello
</li>
`;

exports[`<Tab /> > should support being selected with custom class 1`] = `
<li
  aria-controls="panelnull"
  aria-disabled="false"
  aria-selected="true"
  class="react-tabs__tab cool"
  data-rttab="true"
  id="tabnull"
  role="tab"
  tabindex="0"
/>
`;
